# llm-evaluate

./: .pre-commit-config.yaml  README.md  pyproject.toml  sample-config-openai.yaml  sample-config-t5.yaml  sample-config.yaml
docs/: overview.jpg.drawio  processing-pipeline.drawio
extensions/datasets/: new_dataset.py
extensions/metrics/: new_metric.py
extensions/models/: new_model.py
extensions/parsers/: new_parser.py
llm_evaluate/: __init__.py  api.py  cli.py
llm_evaluate/configs/: datasets.yaml  extensions.yaml  metrics.yaml  model.yaml  parsers.yaml
llm_evaluate/datasets/: __init__.py  custom_dataset.py  dataset.py  hf_hub_mcq_dataset.py  spec.py  utils.py
llm_evaluate/datasets/collection/: bbh.py  mmlu.py  msmarco.py
llm_evaluate/helpers/: configuration_profile.py  constants.py  gpu_monitor.py  latency_utils.py  profile_utils.py  torch_utils.py  utils.py
llm_evaluate/local_assets/: story.txt
llm_evaluate/metrics/: __init__.py  new_metric.py
llm_evaluate/models/: __init__.py  anthropic_model.py  autoclass_model.py  gcp_model.py  llama_cpp.py  llama_cpp_server.py  llama_gptq.py  model.py  openai_model.py  peft_model.py  pipeline_model.py  sparsegpt_model.py
llm_evaluate/parsers/: __init__.py  default_parser.py  default_reference_split_parser.py  json_reference_split_parser.py  keyword_parser.py  parser.py  reference_split_parser.py
llm_evaluate/processing/: benchmark.py  mp_worker.py  runner.py
tests/: __init__.py  conftest.py  dataset_test.py  inference_test.py  metrics_test.py  parser_test.py  tokenization_test.py
tests/assets/: profile.yaml
voiceai/nlp/llm_evaluate/: api.py  cli.py
voiceai/nlp/llm_evaluate/configs/: benchmarks.yaml  model_loaders.yaml
voiceai/nlp/llm_evaluate/datasets/: custom_dataset.py  dataset.py  hf_hub_mcq_dataset.py  spec.py  utils.py
voiceai/nlp/llm_evaluate/helpers/: gpu_monitor.py  latency_utils.py  profile.py  profile_utils.py  torch_utils.py  utils.py
voiceai/nlp/llm_evaluate/metrics/: __init__.py
voiceai/nlp/llm_evaluate/models/: __init__.py  anthropic_model.py  autoclass_model.py  gcp_model.py  llama_cpp.py  llama_cpp_server.py  llama_gptq.py  model.py  openai_model.py  peft_model.py  pipeline_model.py  sparsegpt_model.py
voiceai/nlp/llm_evaluate/parsers/: __init__.py  default_parser.py  default_reference_split_parser.py  json_reference_split_parser.py  keyword_parser.py  parser.py  reference_split_parser.py
(+6 files in other folders)
